; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_em_sti.c_em_sti_register_clocksource.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_em_sti.c_em_sti_register_clocksource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.em_sti_priv = type { i32, %struct.TYPE_2__*, %struct.clocksource }
%struct.TYPE_2__ = type { i32 }
%struct.clocksource = type { i32, i32, i32, i32, i8*, i8*, i32, i32, i32 }

@em_sti_clocksource_read = common dso_local global i32 0, align 4
@em_sti_clocksource_enable = common dso_local global i32 0, align 4
@em_sti_clocksource_disable = common dso_local global i8* null, align 8
@em_sti_clocksource_resume = common dso_local global i32 0, align 4
@CLOCK_SOURCE_IS_CONTINUOUS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"used as clock source\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.em_sti_priv*)* @em_sti_register_clocksource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @em_sti_register_clocksource(%struct.em_sti_priv* %0) #0 {
  %2 = alloca %struct.em_sti_priv*, align 8
  %3 = alloca %struct.clocksource*, align 8
  store %struct.em_sti_priv* %0, %struct.em_sti_priv** %2, align 8
  %4 = load %struct.em_sti_priv*, %struct.em_sti_priv** %2, align 8
  %5 = getelementptr inbounds %struct.em_sti_priv, %struct.em_sti_priv* %4, i32 0, i32 2
  store %struct.clocksource* %5, %struct.clocksource** %3, align 8
  %6 = load %struct.em_sti_priv*, %struct.em_sti_priv** %2, align 8
  %7 = getelementptr inbounds %struct.em_sti_priv, %struct.em_sti_priv* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = call i32 @dev_name(i32* %9)
  %11 = load %struct.clocksource*, %struct.clocksource** %3, align 8
  %12 = getelementptr inbounds %struct.clocksource, %struct.clocksource* %11, i32 0, i32 8
  store i32 %10, i32* %12, align 8
  %13 = load %struct.clocksource*, %struct.clocksource** %3, align 8
  %14 = getelementptr inbounds %struct.clocksource, %struct.clocksource* %13, i32 0, i32 0
  store i32 200, i32* %14, align 8
  %15 = load i32, i32* @em_sti_clocksource_read, align 4
  %16 = load %struct.clocksource*, %struct.clocksource** %3, align 8
  %17 = getelementptr inbounds %struct.clocksource, %struct.clocksource* %16, i32 0, i32 7
  store i32 %15, i32* %17, align 4
  %18 = load i32, i32* @em_sti_clocksource_enable, align 4
  %19 = load %struct.clocksource*, %struct.clocksource** %3, align 8
  %20 = getelementptr inbounds %struct.clocksource, %struct.clocksource* %19, i32 0, i32 6
  store i32 %18, i32* %20, align 8
  %21 = load i8*, i8** @em_sti_clocksource_disable, align 8
  %22 = load %struct.clocksource*, %struct.clocksource** %3, align 8
  %23 = getelementptr inbounds %struct.clocksource, %struct.clocksource* %22, i32 0, i32 5
  store i8* %21, i8** %23, align 8
  %24 = load i8*, i8** @em_sti_clocksource_disable, align 8
  %25 = load %struct.clocksource*, %struct.clocksource** %3, align 8
  %26 = getelementptr inbounds %struct.clocksource, %struct.clocksource* %25, i32 0, i32 4
  store i8* %24, i8** %26, align 8
  %27 = load i32, i32* @em_sti_clocksource_resume, align 4
  %28 = load %struct.clocksource*, %struct.clocksource** %3, align 8
  %29 = getelementptr inbounds %struct.clocksource, %struct.clocksource* %28, i32 0, i32 3
  store i32 %27, i32* %29, align 4
  %30 = call i32 @CLOCKSOURCE_MASK(i32 48)
  %31 = load %struct.clocksource*, %struct.clocksource** %3, align 8
  %32 = getelementptr inbounds %struct.clocksource, %struct.clocksource* %31, i32 0, i32 2
  store i32 %30, i32* %32, align 8
  %33 = load i32, i32* @CLOCK_SOURCE_IS_CONTINUOUS, align 4
  %34 = load %struct.clocksource*, %struct.clocksource** %3, align 8
  %35 = getelementptr inbounds %struct.clocksource, %struct.clocksource* %34, i32 0, i32 1
  store i32 %33, i32* %35, align 4
  %36 = load %struct.em_sti_priv*, %struct.em_sti_priv** %2, align 8
  %37 = getelementptr inbounds %struct.em_sti_priv, %struct.em_sti_priv* %36, i32 0, i32 1
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 0
  %40 = call i32 @dev_info(i32* %39, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %41 = load %struct.clocksource*, %struct.clocksource** %3, align 8
  %42 = load %struct.em_sti_priv*, %struct.em_sti_priv** %2, align 8
  %43 = getelementptr inbounds %struct.em_sti_priv, %struct.em_sti_priv* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = call i32 @clocksource_register_hz(%struct.clocksource* %41, i32 %44)
  ret i32 0
}

declare dso_local i32 @dev_name(i32*) #1

declare dso_local i32 @CLOCKSOURCE_MASK(i32) #1

declare dso_local i32 @dev_info(i32*, i8*) #1

declare dso_local i32 @clocksource_register_hz(%struct.clocksource*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
